--- a/index.html
+++ b/index.html
@@ -63,11 +63,7 @@
                     <h2>アクセス</h2>
                     <p>〒170-0013 東京都豊島区東池袋３丁目６−１／最寄り：池袋駅 徒歩10分</p>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3238.774472693993!2d139.
-                    71446161238413!3d35.73176467245658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018
-                    8d6f3f07b76b%3A0x89f2c0ef0e9ee79f!2z5a2m5qCh5rOV5Lq66Zu75rOi5a2m5ZyS5p2x5Lqs6Zu75a2Q5bCC6Za
-                    A5a2m5qCh!5e0!3m2!1sja!2sjp!4v1762841614956!5m2!1sja!2sjp" width="100%" height="350px" style="
-                    border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3238.774472693993!2d139.71446161238413!3d35.73176467245658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d6f3f07b76b%3A0x89f2c0ef0e9ee79f!2z5a2m5qCh5rOV5Lq66Zu75rOi5a2m5ZyS5p2x5Lqs6Zu75a2Q5bCC6ZaA5a2m5qCh!5e0!3m2!1sja!2sjp!4v1762841614956!5m2!1sja!2sjp" width="100%" height="350px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     <p><a href="https://maps.app.goo.gl/LYajW41XnhzJ6gTGA" target="_blank">Googleマップで見る</a></p>
                 </section>
