--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <header>
         <div class="container header-inner">
             <div class="brand">学園祭2025</div>
-            <nav aria-label="主要ナビゲーション"></nav>
+            <nav aria-label="主要ナビゲーション">
                 <ul>
                     <li><a href="#about">概要</a></li>
                     <li><a href="#schedule">タイムテーブル</a></li>
                     <li><a href="#access">アクセス</a></li>
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
+            </nav>
         </div>
     </header>
 
